--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			let day = new Date();
 			let hh = day.getHours() * 30;
 			let mm = day.getMinutes() * deg;
-			let ss = day.getSeconds() * deg * 1;
+			let ss = day.getSeconds() * deg;
 			hr.style.transform = `rotateZ(${hh+(mm/12)}deg)`;
 			mn.style.transform = `rotateZ(${mm}deg)`;
 			sc.style.transform = `rotateZ(${ss}deg)`;
